# networks-course

application/: README.md
application/client/src/: http_client.rs  main.rs
application/server/: Cargo.toml  cache_meta.json
application/server/src/: http_server.rs  main.rs  proxy_server.rs
lab01/: lab01.md
lab02/: lab02.md
lab02/application/: README.md  app.py
lab03/: lab03.md
lab03/application/: README.md
lab03/application/server/: Cargo.toml
lab03/application/server/src/: main.rs
lab03/examples/: text.txt
lab04/: lab04.md
lab04/application/: README.md
lab04/application/server/: blacklist.json
lab04/application/server/src/: proxy_server.rs
lab05/: lab05.md
lab05/rpc/: README.md  build.gradle.kts  settings.gradle.kts
lab05/rpc/client/: build.gradle.kts
lab05/rpc/gradle/wrapper/: gradle-wrapper.properties
lab05/rpc/server/: build.gradle.kts
lab05/rpc/src/main/kotlin/: Main.kt
lab05/smtp/: README.md  build.gradle.kts  html_message.html  message.txt  settings.gradle.kts
lab05/smtp/gradle/wrapper/: gradle-wrapper.properties
lab05/udp_broadcast/: README.md  client.py  server.py
lab06/: lab06.md
lab06/ftp/: README.md  build.gradle.kts  settings.gradle.kts
lab06/ftp/client/: build.gradle.kts
lab06/ftp/gradle/wrapper/: gradle-wrapper.properties
lab07/: lab07.md
lab07/udp/: README.md  client.py  server.py
lab07/udp_heartbeat/: README.md  client.py  server.py
lab08/: README.md  checksum.py  client.py  lab08.md  server.py  utils.py
lab08/test/: checksum_test.py  client_test.py  server_test.py
(+10 files in other folders)
