[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.2.0", features = ["full"]}
tokio = { version = "1.36.0", features = ["full"]}
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3", features = ["full"]}
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive", "std"] }
chrono = { version = "0.4.35", features = ["alloc"]}
url = { version = "2.5.0", features = ["serde"] }
